# pbrAudio

./: .gitignore  .gitmodules  CMakeLists.txt  CREDITS  README.md  ToDo  ToDo.md  __init__.py  blender_manifest.toml  enginePT.py  materialsNT.py  pbrAudioNodeTree.py  worldND.py  worldPG.py  worldSK.py
audaspace/: __init__.py  nodes.py
audionodes/: __init__.py  ffi.py  midi_in.py  node_tree.py
engine/: __init__.py  base.py  final.py
gui/: __init__.py  dataPT.py  enginePT.py  materialPG.py  materialPT.py  scenePG.py  scenePT.py  worldPG.py  worldPT.py
handlers/: __init__.py
nodes/: __init__.py  ffi.py  midi_in.py  node_tree.py  nodes.py  worldND.py
nodetrees/: materialsNT.py  worldNT.py
operators/: __init__.py  materialOT.py  worldOT.py
pbrAudioCommon/: .gitignore  __init__.py
pbrAudioCommon/lib/: import_helper.py
pbrAudioComon/: README.md  __init__.py
pbrAudioDispersion/: README.md
pbrAudioDispersion/src/objectDispersion/: __init__.py
properties/: objectPG.py  scenePG.py  worldPG.py
sockets/: materialsSK.py  worldSK.py
